--- a/src/ia/PantallaExperto.form
+++ b/src/ia/PantallaExperto.form
@@ -85,9 +85,9 @@
     <Component class="javax.swing.JButton" name="jButton1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Century Schoolbook L" size="15" style="1"/>
+          <Font name="Tahoma" size="16" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Atras"/>
+        <Property name="text" type="java.lang.String" value="Atr&#xe1;s"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
       <Events>
